Cabal-Version:      3.0
Name:               cerra-core
Version:            0.1.0.0
Author:              Cerra
Maintainer:          admin@cerra.io
Build-Type:          Simple
Copyright:           © 2024 Cerra
License:             GPL-3.0-only
License-files:       LICENSE

common c
  default-language: Haskell2010
  default-extensions:
    ExplicitForAll
    ScopedTypeVariables
    DeriveGeneric
    StandaloneDeriving
    DeriveLift
    GeneralizedNewtypeDeriving
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    LambdaCase
    MultiParamTypeClasses
    TypeOperators
    FlexibleInstances
    NamedFieldPuns
    TypeFamilies
    FlexibleContexts
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DataKinds
  ghc-options:
    -Wall -Werror -Wmissing-export-lists -Wcompat
    -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wredundant-constraints -Widentities
    -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
  import: c
  hs-source-dirs: src
  exposed-modules:
    Cerra.Staking.OnChain,
    Cerra.Staking.Types,
    Cerra.FactoryFT.OnChain,
    Cerra.FactoryFT.Types,
    Cerra.Treasury.OnChain,
    Cerra.Treasury.Types,
    Cerra.Utils.Utils,
    Cerra.Utils.Settings
  build-depends:
    , aeson
    , base ^>= 4.14.1.0
    , base16-bytestring
    , bytestring
    , cardano-api
    , cardano-ledger-alonzo
    , containers
    , directory >= 1.3.6.0
    , freer-simple
    , hex-text
    , lens -any
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , plutus-script-utils
    , pretty-show
    , pretty-simple
    , prettyprinter
    , regex-tdfa ^>= 1.3.1.0
    , req ^>= 3.9.0
    , serialise
    , template-haskell >= 2.16.0.0
    , text
    , uuid
    , plutonomy
    , generics-sop

executable cerra-cli
  import: c
  hs-source-dirs: src/Cerra
  main-is:        CerraCLI.hs
  ghc-options:    -threaded -rtsopts "-with-rtsopts=-T"
  build-depends:
    , aeson
    , base ^>= 4.14.1.0
    , bytestring
    , cardano-api
    , cardano-api
    , cardano-ledger-alonzo
    , directory
    , directory >= 1.3.6.0
    , ghc-prim
    , cerra-core
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , pretty-simple
    , serialise
    , template-haskell >= 2.16.0.0
    , text
